<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.fiap.app.sektorapp.CadastroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:id="@+id/edtEmailCadastro"
                android:inputType="textEmailAddress"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha_min_6"
                android:id="@+id/edtSenhaCadastro"
                android:inputType="textPassword"
                android:layout_below="@id/edtEmailCadastro"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirme_senha"
                android:id="@+id/edtConfirmaSenha"
                android:layout_below="@id/edtSenhaCadastro"
                android:inputType="textPassword"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo_cadastro"
                android:layout_marginTop="20dp"
                android:id="@+id/txtTipoCadastro"
                android:layout_below="@id/edtConfirmaSenha"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTipoCadastro"
                android:id="@+id/rgTipoCadastro"
                android:checkedButton="@+id/rbCliente">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/client"
                    android:id="@+id/rbCliente"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/investidor"
                    android:id="@+id/rbInvestidor"
                    />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rgTipoCadastro"
                android:text="@string/tipo_pessoa"
                android:layout_marginTop="20dp"
                android:id="@+id/txtTipoPessoa"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTipoPessoa"
                android:id="@+id/rgTipoPessoa"
                android:checkedButton="@+id/rbFisica">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fisica"
                    android:id="@+id/rbFisica"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/juridica"
                    android:id="@+id/rbJuridica"
                    />
            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rgTipoPessoa"
                android:id="@+id/group1"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rlFisica">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/nome"
                        android:id="@+id/edtNome"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cpf"
                        android:id="@+id/edtCpf"
                        android:layout_below="@id/edtNome"
                        android:inputType="number"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/rg"
                        android:id="@+id/edtRg"
                        android:layout_below="@id/edtCpf"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rlJuridica"
                    android:visibility="invisible">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/razao_social"
                        android:id="@+id/edtRazaoSocial"
                        android:layout_marginTop="20dp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cnpj"
                        android:id="@+id/edtCnpj"
                        android:layout_below="@id/edtRazaoSocial"
                        android:inputType="number"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/inscricao_estadual"
                        android:id="@+id/edtInscricaoEstadual"
                        android:layout_below="@id/edtCnpj"/>
                </RelativeLayout>
            </RelativeLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone"
                android:id="@+id/edtTelefone"
                android:layout_below="@id/group1"
                android:inputType="phone"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cep"
                android:id="@+id/edtCep"
                android:inputType="number"
                android:layout_below="@id/edtTelefone"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/logradouro"
                android:id="@+id/edtLogradouro"
                android:layout_below="@id/edtCep"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero"
                android:id="@+id/edtNumero"
                android:layout_below="@id/edtLogradouro"
                android:inputType="number"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/complemento"
                android:id="@+id/edtComplemento"
                android:layout_below="@id/edtNumero"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bairro"
                android:id="@+id/edtBairro"
                android:layout_below="@id/edtComplemento"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cidade"
                android:id="@+id/edtCidade"
                android:layout_below="@id/edtBairro"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estado"
                android:id="@+id/edtEstado"
                android:layout_below="@id/edtCidade"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtEstado"
                android:id="@+id/group2"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rlCliente">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ocupacao"
                        android:id="@+id/edtOcupacao"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/banco"
                        android:id="@+id/edtBanco"
                        android:layout_below="@id/edtOcupacao"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/agencia"
                        android:id="@+id/edtAgencia"
                        android:layout_below="@id/edtBanco"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/conta"
                        android:id="@+id/edtConta"
                        android:layout_below="@id/edtAgencia"/>

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/arr_escolaridade"
                        android:id="@+id/spEscolaridade"
                        android:layout_below="@id/edtConta"/>

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/arr_estado_civil"
                        android:id="@+id/spEstadoCivil"
                        android:layout_below="@id/spEscolaridade"/>
                    </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rlInvestidor"
                    android:visibility="invisible">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/representante_legal"
                        android:id="@+id/edtRepresentanteLegal"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/data_nascimento"
                        android:id="@+id/edtDataNascimento"
                        android:layout_below="@id/edtRepresentanteLegal"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ramo_atuacao"
                        android:id="@+id/edtRamoAtuacao"
                        android:layout_below="@id/edtDataNascimento"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/qualificao"
                        android:id="@+id/edtQualificao"
                        android:layout_below="@id/edtRamoAtuacao"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/titular_conta"
                        android:id="@+id/edtTitularConta"
                        android:layout_below="@id/edtQualificao"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/conta_custodia"
                        android:id="@+id/edtContaCustodia"
                        android:layout_below="@id/edtTitularConta"/>

                </RelativeLayout>
            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar"
                android:onClick="cadastrarConta"
                android:layout_below="@id/group2"/>
        </RelativeLayout>
    </ScrollView>






</RelativeLayout>
