<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.fiap.app.sektorapp.LoginActivity">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="35dp"
        android:id="@+id/txtApp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:id="@+id/edtEmail"
        android:layout_below="@+id/txtApp"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:id="@+id/edtSenha"
        android:inputType="textPassword"
        android:layout_below="@+id/edtEmail"
        android:layout_marginTop="20dp"
        />

    <CheckBox
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtSenha"
        android:id="@+id/cbConectado"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuar_conectado"
        android:layout_toRightOf="@id/cbConectado"
        android:layout_below="@id/edtSenha"
        android:layout_marginTop="18dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbConectado"
        android:layout_marginTop="20dp"
        android:text="@string/entrar"
        android:background="@android:color/holo_red_light"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:onClick="login"
        android:id="@+id/btnEntrar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEntrar"
        android:id="@+id/btn_criar_conta"
        android:layout_marginTop="20dp"
        android:text="@string/criar_conta"
        android:background="@color/switch_thumb_disabled_material_dark"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:onClick="criarConta"/>

</RelativeLayout>
